@@ -45,6 +45,8 @@ import os                                      # don't remove
 
 # FULLNAME = "John Doe"
 
+# HMAC_BYTES = 3
+
 # HOSTNAME = "domain.dom" 
 
 # INJECT = "/var/qmail/bin/qmail-inject"
