@@ -1,3 +1,15 @@
+2001-09-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Cookie.py (make_sender_cookie): Support variable length HMACs
+	via HMAC_BYTES.
+
+	(confirmationmac): Ditto.
+
+	(datemac): Ditto.
+
+	* Defaults.py (HMAC_BYTES): New variable specifying the number of
+	bytes for all HMACs.
+
 2001-09-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Defaults.py (TMDA_VERSION): Begin 0.37 development.
