@@ -1,3 +1,7 @@
+2001-09-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* sample.tmdarc: Add HMAC_BYTES.
+
 2001-09-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda.spec: Raise version number to 0.37.
